Decrease padding on small devices to avoid hidden elements.

--- a/app/assets/stylesheets/responsive.less
+++ b/app/assets/stylesheets/responsive.less
@@ -72,7 +72,8 @@
 }
 
 /* Small tablet */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
+    body { padding: 0 10px; }
     h2 { font-size: 2.3em; }
     .variant-smallest;
 
